force-app/main/default/objects/Spread_Document__c/Spread_Document__c.object-meta.xml
<CustomObject>
    <description>Source document included in a commercial spreading pilot corpus.</description>
    <label>Spread Document</label>
    <nameField>
        <label>Spread Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spread Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>