force-app/main/default/objects/Spread_Document__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Spread Documents</relationshipLabel>
    <relationshipName>Borrower_Spread_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>