force-app/main/default/objects/Spread_Document__c/fields/Commercial_Loan__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Loan</label>
    <referenceTo>Commercial_Loan__c</referenceTo>
    <relationshipLabel>Spread Documents</relationshipLabel>
    <relationshipName>Spread_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>