force-app/main/default/objects/Spread_Document__c/fields/Contains_Confidential_Data__c.field-meta.xml
<CustomField>
    <fullName>Contains_Confidential_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Confidential Data</label>
    <type>Checkbox</type>
</CustomField>