force-app/main/default/objects/Spread_Document__c/fields/Document_Store__c.field-meta.xml
<CustomField>
    <fullName>Document_Store__c</fullName>
    <description>Physical document storage location. Salesforce Files (ContentDocument) for Path 2 native extraction; nCino Document Manager (AccountDocument) for Path 1 nCino Automated Spreading.</description>
    <inlineHelpText>Select where the source file is stored. Use &quot;nCino Document Manager&quot; for documents uploaded via nCino (Path 1). Use &quot;Salesforce Files&quot; for documents processed through Salesforce-native extraction (Path 2).</inlineHelpText>
    <label>Document Store</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>salesforce_files</fullName>
                <label>Salesforce Files</label>
            </value>
            <value>
                <fullName>ncino_document_manager</fullName>
                <label>nCino Document Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>