force-app/main/default/objects/Spread_Document__c/fields/Extracted_At__c.field-meta.xml
<CustomField>
    <fullName>Extracted_At__c</fullName>
    <label>Extracted At</label>
    <type>DateTime</type>
</CustomField>