force-app/main/default/objects/Spread_Document__c/fields/Extraction_Status__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Status__c</fullName>
    <label>Extraction Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>