force-app/main/default/objects/Spread_Document__c/fields/Loan_Or_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Loan_Or_Opportunity__c</fullName>
    <label>Loan Or Opportunity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>