force-app/main/default/objects/Spread_Document__c/fields/Page_Count__c.field-meta.xml
<CustomField>
    <fullName>Page_Count__c</fullName>
    <label>Page Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>