force-app/main/default/objects/Spread_Document__c/fields/Pilot_Run__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pilot Run</label>
    <referenceTo>Spread_Pilot_Run__c</referenceTo>
    <relationshipLabel>Spread Documents</relationshipLabel>
    <relationshipName>Spread_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>