force-app/main/default/objects/Spread_Document__c/fields/Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Type__c</fullName>
    <label>Scenario Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>